--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,17 +109,17 @@ p {
     background-color: #2589bd;
 }
 
-.benefits-tools {
+.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefits-tools h3 {
+.benefits h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits-tools img {
+.benefits img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
