--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,15 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    position: relative;
 }
 
 body {
     background-color: #d9dcd6;
+}
+
+main{
+    padding-top: 100%;
 }
 
 /* || Header Styles Begin */
@@ -14,6 +19,10 @@ header {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+    width: 100%
 }
 
 header h1 {
@@ -76,6 +85,7 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    position: relative;
 }
 
 .content img {
@@ -95,7 +105,7 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-/* || Hero Styles End */
+/* || Hero-Content Styles End */
 
 /* || Benefits Styles Start */
 .benefits {
