--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
+    flex-wrap: wrap;
 }
 /* || Hero-Content Styles End */
 
@@ -117,9 +118,6 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
-
-.benefits {
     margin-bottom: 32px;
     color: #ffffff;
 }
